--- a/style.css
+++ b/style.css
@@ -350,3 +350,54 @@ display: flex;
     /* line-height: 18px; */
     /* margin: 12px; */
 }
+
+@media screen and (max-width: 850px) {
+    .container {
+      flex-direction: column ;
+    }
+    .search-bar,
+    .location {
+      width: 100%;
+    }
+    .login,.cart {
+      display: none ;
+    }
+  .banner-img{
+      margin-top: 10px;
+      width: 90%;
+      height: 90%;
+  }
+    .footer-all{
+      flex-direction: column;
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+    .row-2 {
+      box-sizing: border-box;
+      font-size: 10px;
+    }
+    .footer-last {
+      font-size: 10px;
+      width: 90%;
+      text-align: center;
+      text-align-last: center;
+    }
+    .footer-item,.btn-1 {
+      margin-top: 10px;
+    }
+    .footer-item-1 {
+      margin-top: 10px;
+      flex-direction: column;
+    }
+    .section-1,.section-2{
+      display: none;
+    }
+    .social-icon{
+        flex-direction: column;
+      width: 30px;
+      height: 30px;
+      font-size: 20px;
+    }
+    
+  }
